--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -49,11 +49,58 @@
     </header>
     <main>
         <div class="container" id="wrapper">
-            <form action="/api/login" method="post">
-                <input type="text" name="playerTag" placeholder="player tag"/><br/>
-                <input type="password" name="password"/><br/>
-                <button type="submit" value="Submit">Submit</button>
+            <h2>Login</h2>
+            <div class="row" id="error-space">
+                <%if(error){%>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 alert alert-danger" style="margin-left:0.5em; margin-right:0.5em;">
+                        <%=error.message%>
+                    </div>
+                    <div class="col-md-2"></div>
+                <%}%>
+            </div>
+            <br/>
+            <form method="POST" action="/api/login" id="loginForm">
+                <div class="normies-user-form-inputs">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4">
+                                <label for="inputPlayerTag">Player Tag</label>
+                                <input type="text" class="form-control" name="playerTag" id="inputPlayerTag" aria-describedby="playerTagHelp" placeholder="Enter player tag">
+                                <small id="inputPlayerTag" class="form-text text-muted">Enter your player tag provided by Clash Royale.</small>
+                            </div>
+                            <div class="col-sm-4"></div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-sm-4"></div>
+                            <div class="col-sm-4">
+                                <label for="inputPassword">Password</label>
+                                <input type="password" class="form-control" name="password" id="inputPassword" aria-describedby="passwordHelp">
+                                <small id="passwordHelp" class="form-text text-muted">Enter the password you set at registration.</small>
+                            </div>
+                            <div class="col-sm-4"></div>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+                <button type="submit" class="btn" id="loginButton">Log In</button>
             </form>
+            <br/>
+            <div class="row">
+                <div class="col-sm-4"></div>
+                <div class="col-sm-4">
+                    <form method="GET" action="/register">
+                        <h3>Don't Have An Account?</h3>
+                        <p>Registration is a quick and easy process. Click on the register button to sign up.</p>
+                        <button class="btn" id="registerRedirectButton">Register</button>
+                    </form>
+                </div>
+                <div class="col-sm-4"></div>
+            </div>
+            <br/>
         </div>
     </main>
     <footer>
