--- a/public/views/account.ejs
+++ b/public/views/account.ejs
@@ -54,7 +54,7 @@
                 <h3 class="card-header display-5"><%= user.username%></h3>
                 <div class="card-block">
                     <h4>Player Tag: <%= user.playerTag%></h4>
-                    <h4>Email: <%= user.email></h4>
+                    <h4>Email: <%= user.email%></h4>
                 </div>
             </div>
         </div>
