--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -57,6 +57,12 @@
                         <%=error.message%>
                     </div>
                     <div class="col-md-2"></div>
+                <%}else if(success){%>
+                    <div class="col-md-2"></div>
+                    <div class="col-md-8 alert alert-success" style="margin-left:0.5em; margin-right:0.5em;">
+                        <%=success.message%>
+                    </div>
+                    <div class="col-md-2"></div>
                 <%}%>
             </div>
             <br/>
