--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -64,9 +64,20 @@
                         <div class="row">
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
-                                <label for="inputPlayerTag">Player Tag</label>
-                                <input type="text" class="form-control" name="playerTag" id="inputPlayerTag" aria-describedby="playerTagHelp" placeholder="Enter player tag">
-                                <small id="inputPlayerTag" class="form-text text-muted">Enter your player tag provided by Clash Royale.</small>
+                                <%if(error.tagErr){%>
+                                    <label for="inputPlayerTag">Player Tag</label>
+                                    <input type="text" class="form-control is-invalid" name="playerTag" id="inputPlayerTag" aria-describedby="playerTagHelp" placeholder="Enter player tag" required>
+                                    <small id="inputPlayerTag" class="form-text text-muted">Enter your player tag provided by Clash Royale.</small>
+                                    <%if(error.tagErr === 'takenErr'){%>
+                                        <div class="invalid-tooltip">Player tag is already in use. Enter a different tag.</div>
+                                    <%}else{%>
+                                        <div class="invalid-tooltip">Enter a valid player tag</div>
+                                    <%}%>
+                                <%}else{%>
+                                    <label for="inputPlayerTag">Player Tag</label>
+                                    <input type="text" class="form-control" name="playerTag" id="inputPlayerTag" aria-describedby="playerTagHelp" placeholder="Enter player tag" required oninvalid="this.setCustomValidity('Enter a valid player tag')" oninput="setCustomValidity('')">
+                                    <small id="inputPlayerTag" class="form-text text-muted">Enter your player tag provided by Clash Royale.</small>
+                                <%}%>
                             </div>
                             <div class="col-md-4"></div>
                         </div>
@@ -75,9 +86,16 @@
                         <div class="row">
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
-                                <label for="inputEmail">Email</label>
-                                <input type="text" class="form-control" name="email" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email">
-                                <small id="emailHelp" class="form-text text-muted">Please enter a valid email. It will be used for password resets.</small>
+                                <%if(error.emailErr){%>
+                                    <label for="inputEmail">Email</label>
+                                    <input type="text" class="form-control is-invalid" name="email" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required>
+                                    <small id="emailHelp" class="form-text text-muted">Please enter a valid email. It will be used for password resets.</small>
+                                    <div class="invalid-tooltip">Enter a valid email.</div>
+                                <%}else{%>
+                                    <label for="inputEmail">Email</label>
+                                    <input type="text" class="form-control" name="email" id="inputEmail" aria-describedby="emailHelp" placeholder="Enter email" required oninvalid="this.setCustomValidity('Enter a valid email')" oninput="setCustomValidity('')">
+                                    <small id="emailHelp" class="form-text text-muted">Please enter a valid email. It will be used for password resets.</small>
+                                <%}%>
                             </div>
                             <div class="col-md-4"></div>
                         </div>
@@ -86,9 +104,16 @@
                         <div class="row">
                             <div class="col-md-4"></div>
                             <div class="col-md-4">
-                                <label for="inputPassword">Password</label>
-                                <input type="password" name="password" class="form-control" id="inputPassword" aria-describedby="passwordHelp">
-                                <small id="passwordHelp" class="form-text text-muted">At the moments there are no password requirements.</small>
+                                <%if(error.passwordErr){%>
+                                    <label for="inputPassword">Password</label>
+                                    <input type="password" name="password" class="form-control is-invalid" id="inputPassword" aria-describedby="passwordHelp" required>
+                                    <small id="passwordHelp" class="form-text text-muted">At the moments there are no password requirements.</small>
+                                    <div class="invalid-tooltip">Enter a valid password</div>
+                                <%}else{%>
+                                    <label for="inputPassword">Password</label>
+                                    <input type="password" name="password" class="form-control" id="inputPassword" aria-describedby="passwordHelp" required oninvalid="this.setCustomValidity('Enter a password')" oninput="setCustomValidity('')">
+                                    <small id="passwordHelp" class="form-text text-muted">At the moments there are no password requirements.</small>
+                                <%}%>
                             </div>
                             <div class="col-md-4"></div>
                         </div>
