--- a/public/views/messages.ejs
+++ b/public/views/messages.ejs
@@ -24,10 +24,10 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#">
-                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top">
+            <a class="navbar-brand" href="/">
+                <img src="/media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top" alt="navbar brand">
                     The Normies
-            </a>                
+            </a>        
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                     <li class="nav-item">
@@ -42,17 +42,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/chat">Messaging</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/account">Account Services</a>
+                    </li>
                 </ul>
             </div>
         </nav>
         <img class="img-fluid" src="/media/header/banner.png" id="banner" alt="banner logo">
     </header>
-    <main>
-        <div class="container" id="wrapper">
-            <form action="/api/chat/send" method="post">
-                <input type="textarea" name="content" placeholder="message contents..."/>
-            </form>
-        </div>
+    <main class="container" id="wrapper">
+        <form action="/api/chat/send" method="post">
+            <input type="textarea" name="content" placeholder="message contents..."/>
+        </form>
     </main>
     <footer>
         <% include ./partials/footer %>
