--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -18,34 +18,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#myNavbar" aria-controls="myNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">
-                <img src="./media/nav/navbrand.png" width="40" height="40" class="d-inline-block align-top" alt="navbar brand">
-                The Normies
-            </a>
-                    
-            <div class="collapse navbar-collapse" id="myNavbar">
-                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/clan">Our Clan</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/search">Search</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <!--<div class="container-fluid" id="home-slides">-->
+        <% include ./partials/nav %>
         <div id="bannerSlides" class="carousel slide" data-ride="carousel" data-interval="5000" data-pause="false">
             <div class="carousel-inner" id="bannerInner">
                 <% for(var i=0; i< pics.length; i++){ %>
@@ -57,9 +30,11 @@
                 <% } %>
             </div>
         </div>
+    </header>
+    <!--<div class="container-fluid" id="home-slides">-->
     <!--</div>-->
-    <main>
-        <div class="container" id="wrapper">
+    <main class="container" id="wrapper">
+        <!--<div class="container" id="wrapper">-->
             <div class="row">
                 <div class="col-md-6">
                     <div class="card">
@@ -118,7 +93,7 @@
                 </div>
             </div>
             <br/><br/>
-        </div>
+        <!--</div>-->
     </main>
     <footer>
         <% include ./partials/footer %>
