--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -77,7 +77,7 @@
                     <form method="GET" action="/register">
                         <h3>Don't Have An Account?</h3>
                         <p>Registration is a quick and easy process. Click on the register button to sign up.</p>
-                        <button class="btn" id="registerRedirectButton">Register</button>
+                        <button class="btn" id="registerRedirectButton" type="submit">Register</button>
                     </form>
                 </div>
                 <div class="col-sm-4"></div>
