--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -207,7 +207,7 @@ main [class^="col"]{
 }
 
 .chat-box{
-    height: 100vh;
+    height: 80vh;
     margin: 0;
     padding: 1em;
     overflow-y: scroll;
@@ -218,13 +218,27 @@ main [class^="col"]{
 
 .message-box{
     width: 100%;
-    background: linear-gradient(to bottom, green, #DEF5E3);
+    background: linear-gradient(to bottom, #0F5820, #07D738);
     border-radius: 3em;
-    padding: 0.5em;
+    padding: 0.5em 1em 0.5em 1em;
     margin-bottom: 0.5em;
-    text-align: left;
     font-family: 'Roboto Slab', sans-serif;
     color: black;
+}
+
+.message-box-user{
+    text-align: left;
+    color: white;
+    margin: 0;
+}
+.message-box-date{
+    text-align: right;
+    margin: 0;
+    color: darkblue;
+}
+.message-box-content{
+    text-align: left;
+    margin: 0;
 }
 
 @media screen and (max-width: 480px){
