--- a/public/views/about.ejs
+++ b/public/views/about.ejs
@@ -78,6 +78,11 @@
     </main>
     <footer>
         <% include ./partials/footer %>
-    </footer>    
+    </footer>
+    <script>
+        window.onload = function(){
+            $('#aboutpage-link').addClass('active');
+        }
+    </script>
 </body>
 </html>
