--- a/public/views/account.ejs
+++ b/public/views/account.ejs
@@ -52,5 +52,10 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        window.onload = function(){
+            $('#accountpage-link').addClass('active');
+        }
+    </script>
 </body>
 </html>
