--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -98,6 +98,10 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        window.onload = function(){
+            $('#homepage-link').addClass('active');
+        }
+    </script>
 </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </html>
