--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -88,5 +88,10 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        window.onload = function(){
+            $('#loginpage-link').addClass('active');
+        }
+    </script>
 </body>
 </html>
