--- a/public/views/messages.ejs
+++ b/public/views/messages.ejs
@@ -34,7 +34,7 @@
                         <a class="nav-link" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/clan">Our Clan</a>
+                        <a class="nav-link" href="/clan">Clan</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/search">Search</a>
@@ -43,7 +43,7 @@
                         <a class="nav-link" href="/about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/chat">Messaging</a>
+                        <a class="nav-link active" href="/chat">Messaging</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/account">Account Services</a>
