--- a/public/views/clan.ejs
+++ b/public/views/clan.ejs
@@ -35,7 +35,14 @@
                     </div>
                 </div>
                 <div class="card-block">
-                    <p class="lead"><%= data.tag %></p>
+                    <%if(data.description){%>
+                        <div class="row">
+                            <div class="col-sm-2"><p class="lead">#<%= data.tag %></p></div>
+                            <div class="col-sm-10"><span style="text-decoration:underline">Description</span>: <%= data.description %><br/></div>
+                        </div>
+                    <%}else{%>
+                        <p class="lead">#<%= data.tag %></p>
+                    <%}%>
                 </div>
             </div>
             <br/>
@@ -106,7 +113,7 @@
             <table class="table table-dark" id="player-list">
                 <thead>
                     <tr>
-                        <th id="player-list-name" scope="col">Name</th>
+                        <th class="player-list-name" scope="col">Name</th>
                         <th scope="col">Level</th>
                         <th scope="col">Trophies</th>
                         <th scope="col">Arena</th>
@@ -116,7 +123,7 @@
                 <tbody id="member-list">
                     <%data.members.forEach(function(member){ %>
                     <tr>
-                        <td id="player-list-name"><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
+                        <td class="player-list-name"><a href="/player/<%= member.tag %>"><%= member.name %></a></td>
                         <td><%= member.expLevel %></td>
                         <td><%= member.trophies %></td>
                         <td><%= member.arena.name %></td>
@@ -130,5 +137,10 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        window.onload = function(){
+            $('#clanpage-link').addClass('active');
+        }
+    </script>
 </body>
 </html>
