--- a/public/views/search.ejs
+++ b/public/views/search.ejs
@@ -68,5 +68,10 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        window.onload = function(){
+            $('#searchpage-link').addClass('active');
+        }
+    </script>
 </body>
 </html>
