--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -29,14 +29,24 @@
             <div class="row" id="error-space">
                 <%if(error){%>
                     <div class="col-md-2"></div>
-                    <div class="col-md-8 alert alert-danger" style="margin-left:0.5em; margin-right:0.5em;">
-                        <%=error.message%>
+                    <div class="col-md-8">
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <%=error.message%>
+                        </div>
                     </div>
                     <div class="col-md-2"></div>
                 <%}else if(success){%>
                     <div class="col-md-2"></div>
-                    <div class="col-md-8 alert alert-success" style="margin-left:0.5em; margin-right:0.5em;">
-                        <%=success.message%>
+                    <div class="col-md-8">
+                        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            <%=success.message%>
+                        </div>
                     </div>
                     <div class="col-md-2"></div>
                 <%}%>
