--- a/public/views/register.ejs
+++ b/public/views/register.ejs
@@ -94,6 +94,22 @@
                             <div class="col-md-4"></div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-md-4"></div>
+                            <div class="col-md-4">
+                                <label for="inputPasswordConfirm">Confirm Password</label>
+                                <input type="text" class="form-control" id="inputPasswordConfirm" required oninvalid="this.setCustomValidity('Confirm the password')" oninput="setCustomValidity('')">
+                                <div class="valid-feedback">
+                                    <strong>Passwords match!</strong>
+                                </div>
+                                <div class="invalid-feedback">
+                                    <strong>Passwords do not match!</strong>
+                                </div>
+                            </div>
+                            <div class="col-md-4"></div>
+                        </div>
+                    </div>
                 </div>
                 <br/>
                 <button type="submit" class="btn">Register</button>
@@ -104,5 +120,20 @@
     <footer>
         <% include ./partials/footer %>
     </footer>
+    <script>
+        $(document).ready(function(){
+            $('#inputPasswordConfirm').keyup(function(){
+                var passwordConfirmVal = $('#inputPasswordConfirm').val();
+                var passwordVal = $('#inputPassword').val();
+                if(passwordConfirmVal != passwordVal){
+                    $('#inputPasswordConfirm').removeClass('is-valid');
+                    $('#inputPasswordConfirm').addClass('is-invalid');
+                }else{
+                    $('#inputPasswordConfirm').removeClass('is-invalid');
+                    $('#inputPasswordConfirm').addClass('is-valid');
+                }
+            })
+        });
+    </script>
 </body>
 </html>
