--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -17,6 +17,13 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab">
     <!--custom css-->
     <link rel="stylesheet" href="/styles/style.css">
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9386286838351200",
+        enable_page_level_ads: true
+    });
+    </script>
 </head>
 <body>
     <header>
